kubefargate/sampe-cpulimit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-cpu-demo
  namespace: default
spec:
  containers:
  - name: cpu-cpu-ctr
    image: vish/stress
    resources:
      limits:
        cpu: "1"
      requests:
        cpu: "0.5"
    args:
    - -cpus
    - "2"
