kubefargate/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service-1
spec:
  type: LoadBalancer
  selector:
    app: nginx_pod_1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
