kubefargate/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service-1
spec:
  type: NodePort
  selector:
    app: nginx_pod_1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30500
