kubefargate/sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host : my-service.local
    http:
      paths:
      - path: /
        backend:
          serviceName: my-service
          servicePort: 80
      - path: /b
        backend:
          serviceName: my-service2
          servicePort: 80
